<resources>
    <string name="app_name">TestATI  - test task</string>
    <integer name="ripple_duration">300</integer>
    <string name="error_no_internet">Нет Интернета. Гружу из БД</string>
    <string name="details_title">Информация о грузе</string>

    <string name="details_caro_type_label">Tип груза:</string>
    <string name="details_load_label">Место загрузки:</string>
    <string name="details_unload_label">Место разгрузки:</string>
    <string name="details_note_label">Комментарий:</string>
    <string name="details_currency_label">Название из словаря:</string>

    <string name="empty_db">База данных пуста</string>
    <string name="error_http_beg">Произошла HTTP-ощибка:</string>
    <string name="error_http_end">Если там 401 ошибка, то знайте: запрос пост раньше работал нормально, и я успел сохранить JSON репонса :). Чтобы его сымитировать, переключите BuildVariant на mockedNetwork.\nА пока попробую загрузить из Базы Данных</string>

</resources>
