<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/cargo_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".details.DetailsActivity"
    tools:showIn="@layout/activity_details">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin"
        android:text="@string/details_caro_type_label"
        android:textSize="@dimen/detail_big_text_size" />

    <TextView
        android:id="@+id/fragment_detail_cargo_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin_small"
        android:textSize="@dimen/detail_small_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin"
        android:text="@string/details_load_label"
        android:textSize="@dimen/detail_big_text_size" />

    <TextView
        android:id="@+id/fragment_detail_cargo_load_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin_small"
        android:textSize="@dimen/detail_small_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin"
        android:text="@string/details_unload_label"
        android:textSize="@dimen/detail_big_text_size" />

    <TextView
        android:id="@+id/fragment_detail_cargo_unload_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin_small"
        android:textSize="@dimen/detail_small_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin"
        android:text="@string/details_note_label"
        android:textSize="@dimen/detail_big_text_size" />

    <TextView
        android:id="@+id/fragment_detail_note_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin_small"
        android:textSize="@dimen/detail_small_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin"
        android:text="@string/details_currency_label"
        android:textSize="@dimen/detail_big_text_size" />

    <TextView
        android:id="@+id/fragment_detail_currency_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_margin_small"
        android:textSize="@dimen/detail_small_text_size" />
</LinearLayout>
